[package]
name = "aw-watcher-network-location"
version = "0.1.0"
edition = "2021"

[dependencies]
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
dirs = "5.0.1"
log = "0.4.21"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wifilocate = "0.1.4"
